--- a/tomb.html
+++ b/tomb.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="css/slickslider.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="style.css"> -->
-	<link rel="stylesheet" href="/cleancss/amp.css">
-  <link rel="stylesheet" href="/css/preload.css">
+	<link rel="stylesheet" href="cleancss/amp.css">
+  <link rel="stylesheet" href="css/preload.css">
   <meta name="google-site-verification" content="2rHJ7VRPQvWn6LSai_6iqg6l9tapR7KgqtMHnSXioOQ" />
   <meta name="robots" content="noindex,nofollow" />
 	<style>
@@ -51,7 +51,7 @@
         <div class="admin-menu">
           <div class="logo">
             <a href="/">
-              <img class="nftmax-logo__main" src="/img/slope-logo.png" alt="Slope Game Logo">
+              <img class="nftmax-logo__main" src="img/slope-logo.png" alt="Slope Game Logo">
             </a>
             <div class="nftmax__sicon close-icon" onclick="hideMenu()">
               <img src="img/menu-toggle.svg" alt="#">
@@ -229,4 +229,4 @@
       
     </div>
 
-  <script src="/js/custom.js?v=22823_1"></script><script src="/cloak.js?v=1"></script></body></html>
+  <script src="js/custom.js?v=22823_1"></script><script src="/cloak.js?v=1"></script></body></html>
